// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/invitation_modal/InvitationModalInitialStep should match the snapshot 1`] = `
<div
  className="InvitationModalInitialStep"
>
  <div
    className="modal-icon"
  >
    <InviteIcon />
  </div>
  <h1
    id="invitation_modal_title"
  >
    <injectIntl(FormattedMarkdownMessage)
      defaultMessage="Invite people to **{teamName}**"
      id="invitation_modal.title"
      values={
        Object {
          "teamName": "test",
        }
      }
    />
  </h1>
  <div
    aria-describedby="inviteMembersSectionDescription"
    aria-labelledby="inviteMembersSectionHeader"
    className="invitation-modal-option"
    data-testid="inviteMembersLink"
    onClick={[MockFunction]}
    onKeyDown={[Function]}
    tabIndex="0"
  >
    <div
      data-testid="inviteMembersSection"
    >
      <h2
        id="inviteMembersSectionHeader"
      >
        <injectIntl(FormattedMarkdownMessage)
          defaultMessage="Invite **Members**"
          id="invitation_modal.invite_members.title"
        />
      </h2>
      <FormattedMessage
        defaultMessage="Invite new team members with a link or by email. Team members have access to messages and files in open teams and public channels."
        id="invitation_modal.invite_members.description"
      >
        <Component />
      </FormattedMessage>
    </div>
    <ArrowRightIcon
      className="arrow"
    />
  </div>
  <div
    aria-describedby="inviteGuestsSectionDescription"
    aria-labelledby="inviteGuestsSectionHeader"
    className="invitation-modal-option"
    data-testid="inviteGuestLink"
    onClick={[MockFunction]}
    onKeyDown={[Function]}
    tabIndex="0"
  >
    <div>
      <h2
        id="inviteGuestsSectionHeader"
      >
        <injectIntl(FormattedMarkdownMessage)
          defaultMessage="Invite **Guests**"
          id="invitation_modal.invite_guests.title"
        />
      </h2>
      <FormattedMessage
        defaultMessage="Invite guests to one or more channels. Guests only have access to messages, files, and people in the channels they are members of."
        id="invitation_modal.invite_guests.description"
      >
        <Component />
      </FormattedMessage>
    </div>
    <ArrowRightIcon
      className="arrow"
    />
  </div>
</div>
`;

exports[`components/invitation_modal/InvitationModalInitialStep should match the snapshot when email invitations are disabled 1`] = `
<div
  className="InvitationModalInitialStep"
>
  <div
    className="modal-icon"
  >
    <InviteIcon />
  </div>
  <h1
    id="invitation_modal_title"
  >
    <injectIntl(FormattedMarkdownMessage)
      defaultMessage="Invite people to **{teamName}**"
      id="invitation_modal.title"
      values={
        Object {
          "teamName": "test",
        }
      }
    />
  </h1>
  <div
    aria-describedby="inviteMembersSectionDescription"
    aria-labelledby="inviteMembersSectionHeader"
    className="invitation-modal-option"
    data-testid="inviteMembersLink"
    onClick={[MockFunction]}
    onKeyDown={[Function]}
    tabIndex="0"
  >
    <div
      data-testid="inviteMembersSection"
    >
      <h2
        id="inviteMembersSectionHeader"
      >
        <injectIntl(FormattedMarkdownMessage)
          defaultMessage="Invite **Members**"
          id="invitation_modal.invite_members.title"
        />
      </h2>
      <FormattedMessage
        defaultMessage="Invite new team members with a link. Team members have access to messages and files in open teams and public channels."
        id="invitation_modal.invite_members.description-email-disabled"
      >
        <Component />
      </FormattedMessage>
    </div>
    <ArrowRightIcon
      className="arrow"
    />
  </div>
  <div
    aria-describedby="inviteGuestsSectionDescription"
    aria-labelledby="inviteGuestsSectionHeader"
    className="invitation-modal-option"
    data-testid="inviteGuestLink"
    onClick={[MockFunction]}
    onKeyDown={[Function]}
    tabIndex="0"
  >
    <div>
      <h2
        id="inviteGuestsSectionHeader"
      >
        <injectIntl(FormattedMarkdownMessage)
          defaultMessage="Invite **Guests**"
          id="invitation_modal.invite_guests.title"
        />
      </h2>
      <FormattedMessage
        defaultMessage="Invite guests to one or more channels. Guests only have access to messages, files, and people in the channels they are members of."
        id="invitation_modal.invite_guests.description"
      >
        <Component />
      </FormattedMessage>
    </div>
    <ArrowRightIcon
      className="arrow"
    />
  </div>
</div>
`;
